# presence

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  we.dev.config.ts  weave.dev.config.ts
dnas/presence/workdir/: dna.yaml
dnas/presence/zomes/coordinator/room/: Cargo.toml
dnas/presence/zomes/coordinator/room/src/: all_agents.rs  all_attachments.rs  all_descendent_rooms.rs  attachment.rs  lib.rs  (+2 more)
dnas/presence/zomes/integrity/room/: Cargo.toml
dnas/unzoom/workdir/: dna.yaml
dnas/unzoom/zomes/coordinator/unzoom/: Cargo.toml
dnas/unzoom/zomes/integrity/unzoom/: Cargo.toml
ui/: index.html  package.json  vite.config.ts
ui/src/: agent-avatar.ts  agent-connection-status-icon.ts  agent-connection-status.ts  attachment-element.ts  avatar-with-nickname.ts  contexts.ts  holo-identicon.ts  holochain-app.ts  list-online-agents.ts  logging.ts  main-view.ts  personal-room-card.ts  presence-app.ts  private-room-card.ts  room-client.ts  room-container.ts  room-store.ts  room-view.ts  shared-room-card.ts  sharedStyles.ts  streams-store.ts  toggle-switch.ts  types.ts  unzoom-app.ts  unzoom-client.ts  unzoom-store.ts  utils.ts
ui/src/lobby/: agent-avatar.ts  list-online-agents.ts  private-room-card.ts  shared-room-card.ts
ui/src/room/: logs-graph.ts  room-client.ts  room-container.ts  room-view.ts
ui/src/room/elements/: agent-connection-status-icon.ts  agent-connection-status.ts  attachment-element.ts  avatar-with-nickname.ts
ui/src/shared/: holo-identicon.ts
ui/src/unzoom/unzoom/: types.ts
workdir/: happ.yaml  web-happ.yaml
(+10 files in other folders)
