[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = { version = "0.4.1" }
hdk = { version = "0.3.1" }
serde = "1"

[workspace.dependencies.room]
path = "dnas/presence/zomes/coordinator/room"

[workspace.dependencies.room_integrity]
path = "dnas/presence/zomes/integrity/room"
