[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = { version = "0.6.0-rc.2" }
hdk = { version = "0.5.0-rc.2" }
serde = "1"

[workspace.dependencies.room]
path = "dnas/presence/zomes/coordinator/room"

[workspace.dependencies.room_integrity]
path = "dnas/presence/zomes/integrity/room"
