[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = { version = "0.7.0" }
hdk = { version = "0.6.0" }
holochain_serialized_bytes = "0.0.56"
serde = "1"

[workspace.dependencies.room]
path = "dnas/presence/zomes/coordinator/room"

[workspace.dependencies.room_integrity]
path = "dnas/presence/zomes/integrity/room"
